Ability to dynamically select a composer based on flask.request.
A Studio now takes a  get_composer() function to return teh composer. This allows for teh dynamic selection of composers.

This is a breaking change but requres very little work to fix it. It will cause a major version jump.

--- a/fn_graph_studio/styles.css
+++ b/fn_graph_studio/styles.css
@@ -336,7 +336,10 @@ mark {
   color: #fff;
 }
 
-.result-loader {
+/* The Loading component has a terrible API 
+ * This is the only way to get a solid style on it
+ */
+.result-layout > :last-child {
   flex-grow: 1;
 }
 
